Add save_to_sheet endpoint and refactor extract_summary
